--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html ng-app="primeiraApp">
 
 <head>
   <meta charset="utf-8" />
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/deps.min.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/app.min.css" />
-  <script src="main.js"></script>
 </head>
 
 <body class="skin-blue fixed sidebar-mini">
@@ -21,6 +20,7 @@
   
   <script src="/assets/js/deps.min.js"></script>
   <script src="/assets/js/app.min.js"></script>
+  
 </body>
 
 </html>
