Implementação do Header

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Primeira App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/deps.min.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/app.min.css" />
+  <link rel="stylesheet" href="/assets/css/deps.min.css" />
+  <link rel="stylesheet" href="/assets/css/app.min.css" />
 </head>
 
 <body class="skin-blue fixed sidebar-mini">
