Implementação do Footer

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,14 @@
   <div class="wrapper">
     <header class="main-header" ng-include="'/template/header.html'"></header>
     <aside class="main-sidebar" ng-include="'/template/menu.html'"></aside>
-    <div class="content-wrapper ui-view"></div><!--renderiza a pagina -->
+    <div class="content-wrapper ui-view"></div>
+    <!--renderiza a pagina -->
     <footer class="main-footer" ng-include="'/template/footer.html'"></footer>
   </div>
-  
+
   <script src="/assets/js/deps.min.js"></script>
   <script src="/assets/js/app.min.js"></script>
-  
+
 </body>
 
 </html>
