--- a/app/index.html
+++ b/app/index.html
@@ -2,23 +2,24 @@
 <html ng-app="primeiraApp">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Primeira App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/css/deps.min.css" />
-  <link rel="stylesheet" href="/assets/css/app.min.css" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="stylesheet" href="/assets/css/deps.min.css">
+  <link rel="stylesheet" href="/assets/css/app.min.css">
 </head>
 
 <body class="skin-blue fixed sidebar-mini">
+  
   <div class="wrapper">
     <header class="main-header" ng-include="'/template/header.html'"></header>
     <aside class="main-sidebar" ng-include="'/template/menu.html'"></aside>
-    <div class="content-wrapper ui-view"></div>
+    <div class="content-wrapper" ui-view></div>
     <!--renderiza a pagina -->
     <footer class="main-footer" ng-include="'/template/footer.html'"></footer>
   </div>
-
+  
   <script src="/assets/js/deps.min.js"></script>
   <script src="/assets/js/app.min.js"></script>
 
