--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -1,6 +1,4 @@
-<section class="content-header">
-  <h1>Dashboard <small>Version 1.0</small></h1>
-</section>
+<content-header name="Dashboard" small="versão 1.0"></content-header>
 
 <section class="content">
    <div class="col-xs-4">
