--- a/app/billingCycle/tabs.html
+++ b/app/billingCycle/tabs.html
@@ -1,1 +1,32 @@
-<h1>Ciclo de Pagamentos</h1>
+<content-header name="Ciclo de Pagamentos" small="Cadastro"></content-header>
+
+<section class="content">
+  <div class="nav-tabs-custom" >
+    <ul class="nav nav-tabs">
+      <li>
+        <a href data-target="#tabList" data-toggle="tab">
+          <i class="fa fa-bars"></i> Lista
+          </a>
+      </li>
+
+      <li>
+        <a href data-target="#tabCreate" data-toggle="tab">
+           <i class="fa fa-plus"></i> Incluir
+        </a>
+     </li>
+
+     <li>
+        <a href data-target="#tabUpdate" data-toggle="tab">
+           <i class="fa fa-pencil"></i> Alterar
+        </a>
+     </li>
+
+      <li>
+         <a href data-target="#tabDelete" data-toggle="tab">
+           <i class="fa fa-trash-o"></i> Excluir
+        </a>
+     </li>
+
+    </ul>
+  </div>
+</section>
