--- a/app/billingCycle/list.html
+++ b/app/billingCycle/list.html
@@ -9,13 +9,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="billingCycle in billingCycles">
+      <tr ng-repeat="billingCycle in bcCtrl.billingCycles">
         <td>{{:: billingCycle.name }}</td>
         <td>{{:: billingCycle.month }}</td>
         <td>{{:: billingCycle.year }}</td>
         <td style="width:100px;">
-          <button class="btn btn-warning" ng-click="showTabUpdate(billingCycle)"><i class="fa fa-pencil"></i></button>
-          <button class="btn btn-danger" ng-click="showTabDelete(billingCycle)"><i class="fa fa-trash-o"></i></button>
+          <button class="btn btn-warning" ng-click="bcCtrl.showTabUpdate(billingCycle)"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger" ng-click="bcCtrl.showTabDelete(billingCycle)"><i class="fa fa-trash-o"></i></button>
         </td>
       </tr>
     </tbody>
