--- a/app/billingCycle/form.html
+++ b/app/billingCycle/form.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="box-footer">
-    <button class="btn btn-primary" ng-click="bcCtrl.create"  ng-if="bcCtrl.tabCreate">Incluir</button>
+    <button class="btn btn-primary" ng-click="bcCtrl.create()"  ng-if="bcCtrl.tabCreate">Incluir</button>
     <button class="btn btn-info"  ng-if="bcCtrl.tabUpdate">Alterar</button>
     <button class="btn btn-danger"  ng-if="bcCtrl.tabDelete">Excluir</button>
     <button class="btn btn-default" ng-click="bcCtrl.refresh()">Cancelar</button>
