--- a/app/billingCycle/form.html
+++ b/app/billingCycle/form.html
@@ -6,6 +6,13 @@
     <field id="year" label="Ano" grid="12 6 4" placeholder="Informe o Ano" model="bcCtrl.billingCycle.year" type="number" readonly="bcCtrl.tabDelete"></field>
   </div>
 
+  <div class="col-xs-12 col-lg-6">
+    <fieldset>
+      <legend>Créditos</legend>
+      <div ng-include="'billingCycle/creditList.html'"></div>
+    </fieldset>
+  </div>
+
   <div class="box-footer">
     <button class="btn btn-primary" ng-click="bcCtrl.create()"  ng-if="bcCtrl.tabCreate">Incluir</button>
     <button class="btn btn-info"  ng-if="bcCtrl.tabUpdate" ng-click="bcCtrl.update()">Alterar</button>
