--- a/app/billingCycle/form.html
+++ b/app/billingCycle/form.html
@@ -13,6 +13,14 @@
     </fieldset>
   </div>
 
+  <div class="col-xs-12 col-lg-6">
+    <fieldset>
+      <legend>Débitos</legend>
+      <div ng-include="'billingCycle/debtList.html'"></div>
+    </fieldset>
+  </div>
+</div>
+
   <div class="box-footer">
     <button class="btn btn-primary" ng-click="bcCtrl.create()"  ng-if="bcCtrl.tabCreate">Incluir</button>
     <button class="btn btn-info"  ng-if="bcCtrl.tabUpdate" ng-click="bcCtrl.update()">Alterar</button>
