--- a/app/billingCycle/creditList.html
+++ b/app/billingCycle/creditList.html
@@ -16,9 +16,9 @@
           <input ng-model="credit.value" class="form-control" placeholder="Informe o Valor" ng-readonly="bcCtrl.tabDelete" type="number" />
         </td>
         <td style="width:150px;" ng-if="!tabDelete">
-          <button class="btn btn-success" ng-click="addCredit($index)"><i class="fa fa-plus"></i></button>
-          <button class="btn btn-warning" ng-click="cloneCredit($index,credit)"><i class="fa fa-clone"></i></button>
-          <button class="btn btn-danger" ng-click="deleteCredit($index)"><i class="fa fa-trash-o"></i></button>
+          <button class="btn btn-success" ng-class="{disabled: bcCtrl.tab.Delete}" ng-click="bcCtrl.addCredit($index)"><i class="fa fa-plus"></i></button>
+          <button class="btn btn-warning" ng-class="{disabled: bcCtrl.tab.Delete}" ng-click="bcCtrl.cloneCredit($index,credit)"><i class="fa fa-clone"></i></button>
+          <button class="btn btn-danger" ng-class="{disabled: bcCtrl.tab.Delete}" ng-click="bcCtrl.deleteCredit($index)"><i class="fa fa-trash-o"></i></button>
         </td>
         <td style="width:150px;" ng-if="tabDelete">
           <button class="btn btn-success disabled"><i class="fa fa-plus"></i></button>
