Refaturação com backend

--- a/app/auth/form.html
+++ b/app/auth/form.html
@@ -1,5 +1,5 @@
 <div class="login-box" ng-controller="AuthCtrl as auth">
-    <div class="login-logo"><b> Primeira</b> APP</div>
+    <div class="login-logo"><b> WASINFO</b> ERP</div>
     <div class="login-box-body">
         <p class="login-box-msg">Bem vindo!</p>
         <form>
