--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="primeiraApp">
+<html ng-app="wasinfoErp">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Primeira App</title>
+  <title>WASINFO ERP</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="/assets/css/deps.min.css">
   <link rel="stylesheet" href="/assets/css/app.min.css">
