--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   
   <div class="wrapper">
     <header class="main-header" ng-include="'/template/header.html'"></header>
-    <aside class="main-sidebar" ng-include="'/template/menu.html'"></aside>
+    <aside class="main-sidebar" ng-include="'/template/menu/menu.html'"></aside>
     <div class="content-wrapper" ui-view></div>
     <!--renderiza a pagina -->
     <footer class="main-footer" ng-include="'/template/footer.html'"></footer>
