--- a/app/auth/form.html
+++ b/app/auth/form.html
@@ -24,7 +24,7 @@
         <a href="javascript:;" ng-click="auth.changeMode()">
             {{ auth.loginMode ? 
                 'Novo usuário? Registrar aqui!' :
-                'Já é cadastrado? Entrar aqui!' }}
+                'Já possuo cadastro? Entrar aqui!' }}
         </a>
     </div>
 </div>
