--- a/app/billingCycle/tabs.html
+++ b/app/billingCycle/tabs.html
@@ -1,4 +1,4 @@
-<content-header name="Ciclo de Pagamentos" small="Cadastro"></content-header>
+<content-header name="Financeiro" small="Cadastro"></content-header>
 
 <section class="content">
   <div class="nav-tabs-custom" ng-controller="BillingCycleCtrl as bcCtrl">
