--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body class="skin-blue fixed sidebar-mini">
   
   <div class="wrapper">
-    <header class="main-header" ng-include="'/template/header.html'"></header>
+    <header class="main-header" ng-include="'/template/header/header.html'"></header>
     <aside class="main-sidebar" ng-include="'/template/menu/menu.html'"></aside>
     <div class="content-wrapper" ui-view></div>
     <!--renderiza a pagina -->
