--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <aside class="main-sidebar" ng-include="'/template/menu/menu.html'"></aside>
     <div class="content-wrapper" ui-view></div>
     <!--renderiza a pagina -->
-    <footer class="main-footer" ng-include="'/template/footer.html'"></footer>
+    <!-- <footer class="main-footer" ng-include="'/template/footer.html'"></footer> -->
   </div>
   
   <script src="/assets/js/deps.min.js"></script>
