--- a/app/billingCycle/list.html
+++ b/app/billingCycle/list.html
@@ -1,5 +1,5 @@
-<div class="box-body">
-  <table class="table">
+<!-- Lista de creditos e debitos -->
+    <table class="table">
     <thead>
       <tr>
         <th>Nome</th>
@@ -20,7 +20,7 @@
       </tr>
     </tbody>
   </table>
-</div>
+
 <div class="box-footer clearfix">
    <paginator url="/#!/billingCycles" pages="{{ bcCtrl.pages }}"></paginator>
 </div>
