--- a/app/billingCycle/summary.html
+++ b/app/billingCycle/summary.html
@@ -1,3 +1,4 @@
+<!-- Dreash board - da tela alter-->
 <div class="row">
   <value-box grid="12 4" color-class="bg-green" icon-class="fa fa-bank"
     value="R$ {{ bcCtrl.credit | number: 2 }}" text="Total de Créditos"></value-box>
