Cadastro funcionario, refectory

--- a/app/funcionario/dadosAdministrativos.html
+++ b/app/funcionario/dadosAdministrativos.html
@@ -1,6 +1,10 @@
 <!-- Tela de inclusão de registro -->
 <div role="form">
+    
     <div class="form-group">
        <h1>Dados administrativos</h1>
     </div>
+
+     <!-- Botão - inculuir, exluir, altear e gravar-->
+     <div ng-include="'funcionario/button.html'"></div>
 </div>
