--- a/app/funcionario/list.html
+++ b/app/funcionario/list.html
@@ -14,18 +14,20 @@
                 <td>{{:: funcionario.cpf }}</td>
                 <td>{{:: funcionario.endereco }}</td>
                 <td style="width:100px;">
+                    <!-- Botão editar registro -->
                     <button class="btn btn-warning" ng-click="funCtrl.showTabUpdate(funcionario)">
                         <i class="fa fa-pencil"></i>
                     </button>
+                    <!-- Botão excluir registro -->
                     <button class="btn btn-danger" ng-click="funCtrl.showTabDelete(funcionario)">
                         <i class="fa fa-trash-o"></i>
                     </button>
                 </td>
             </tr>
         </tbody>
-        
     </table>
 
+    <!-- Paginação -->
     <div class="box-footer clearfix">
         <paginator url="/#!/funcionarios" pages="{{ funCtrl.pages }}"></paginator>
     </div>
