--- a/app/funcionario/dadosPessoais.html
+++ b/app/funcionario/dadosPessoais.html
@@ -19,7 +19,7 @@
         <field id="categoriacnh" label="Categoria da CNH" grid="12 6 4" placeholder="Informe o categoria da CNH" model="funCtrl.funcionario.categoriacnh" readonly="funCtrl.tabDelete"></field>
         <field id="vencimentocnh" label="Vencimento da CNH" grid="12 6 4" type="date" model="funCtrl.funcionario.vencimentocnh" readonly="funCtrl.tabDelete"></field>
 
-        <field id="datacontratacao" label="*  Data de contratação" grid="12 6 4" type="date" model="funCtrl.funcionario.datacontratacao" readonly="funCtrl.tabDelete"></field>
+        <field id="datacontratacao" label="*  Data de contratação" grid="12 6 4" model="funCtrl.funcionario.datacontratacao" readonly="funCtrl.tabDelete"></field>
         <field id="departamento" label="*Departamento" grid="12 6 4" placeholder="Informe o nome do departamento" model="funCtrl.funcionario.departamento" readonly="funCtrl.tabDelete"></field>
         <field id="cargo" label="Cargo" grid="12 6 4" placeholder="Informe o nome do cargo" model="funCtrl.funcionario.cago" readonly="funCtrl.tabDelete"></field>
                
