--- a/app/funcionario/header.html
+++ b/app/funcionario/header.html
@@ -1,4 +1,4 @@
-<div class="box-body" ng-if="funCtrl.tabCreate">
+<div class="box-body" ng-if="funCtrl.tabCreate || funCtrl.tabUpdate || funCtrl.tabDelete">
   <!-- Abas do cadastro do funcionario -->
   <div class="col-md-12">
       <!-- Custom Tabs -->
