--- a/app/funcionario/button.html
+++ b/app/funcionario/button.html
@@ -1,4 +1,4 @@
-<!-- Botão - inculuir, exluir, altear e gravar-->
+<!-- Botão rodapé dos formularios - inculuir, exluir, altear e gravar-->
 <div class="box-footer">
   <button class="btn btn-primary" ng-click="funCtrl.create()" ng-if="funCtrl.tabCreate">Incluir</button>
   <button class="btn btn-info" ng-if="funCtrl.tabUpdate" ng-click="funCtrl.update()">Alterar</button>
