--- a/app/funcionario/list.html
+++ b/app/funcionario/list.html
@@ -14,11 +14,11 @@
                 <td>{{:: funcionario.cpf }}</td>
                 <td>{{:: funcionario.endereco }}</td>
                 <td style="width:100px;">
-                    <!-- Botão editar registro -->
+                    <!-- Botão editar registro, visualiza a aba alterar -->
                     <button class="btn btn-warning" ng-click="funCtrl.showTabUpdate(funcionario)">
                         <i class="fa fa-pencil"></i>
                     </button>
-                    <!-- Botão excluir registro -->
+                    <!-- Botão excluir registro, visualiza a aba excluir -->
                     <button class="btn btn-danger" ng-click="funCtrl.showTabDelete(funcionario)">
                         <i class="fa fa-trash-o"></i>
                     </button>
