--- a/app/funcionario/header.html
+++ b/app/funcionario/header.html
@@ -5,13 +5,13 @@
       <div class="nav-tabs-custom">
           <ul class="nav nav-tabs">
               <li ng-if="funCtrl.tabDadosPessoais" ng-class="{active: funCtrl.tabDadosPessoais}">
-                  <a href data-target="#tabDadosPessoais" data-toggle="tab" aria-expanded="true" >Dados pessoais</a>
+                  <a href data-target="#tabDadosPessoais" data-toggle="tab" aria-expanded="true" >Pessoal</a>
               </li>
               <li ng-if="funCtrl.tabAddress">
                   <a href data-target="#tabAddress" data-toggle="tab" aria-expanded="false">Endereço</a>
               </li>
               <li ng-if="funCtrl.tabDadosComplementares">
-                  <a href data-target="#tabDadosComplementares" data-toggle="tab" aria-expanded="false">Dados complementar</a>
+                  <a href data-target="#tabDadosComplementares" data-toggle="tab" aria-expanded="false">Outras</a>
               </li>
               <!-- <li ng-if="funCtrl.tabDadosAdministrativo">
                   <a href data-target="#tabDadosAdministrativo" data-toggle="tab" aria-expanded="false">Dados administrativos</a>
