--- a/app/funcionario/list.html
+++ b/app/funcionario/list.html
@@ -1,33 +1,43 @@
-<!-- Lista de creditos e debitos -->
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>CPF</th>
-                <th>Endereço</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="funcionario in funCtrl.funcionarios">
-                <td>{{:: funcionario.nomefuncionario }}</td>
-                <td>{{:: funcionario.cpf }}</td>
-                <td>{{:: funcionario.endereco }}</td>
-                <td style="width:100px;">
-                    <!-- Botão editar registro, visualiza a aba alterar -->
-                    <button class="btn btn-warning" ng-click="funCtrl.showTabUpdate(funcionario)">
-                        <i class="fa fa-pencil"></i>
-                    </button>
-                    <!-- Botão excluir registro, visualiza a aba excluir -->
-                    <button class="btn btn-danger" ng-click="funCtrl.showTabDelete(funcionario)">
-                        <i class="fa fa-trash-o"></i>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<!-- Pesquisar -->
 
-    <!-- Paginação -->
-    <div class="box-footer clearfix">
-        <paginator url="/#!/funcionarios" pages="{{ funCtrl.pages }}"></paginator>
-    </div>
+<div class="input-group input-group-sm">
+        <input id="pesquisarfuncionario" ng-model="pesquisarFuncionario" type="text" class="form-control"  placeholder="Informe o cpf ou nome para pesquisar">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-info btn-flat"><i class="fa fa-fw fa-search"></i></button>
+            </span>
+      </div>
+
+<!-- Lista de funcionarios -->
+<table class="table">
+
+    <thead>
+        <tr>
+            <th>Nome</th>
+            <th>CPF</th>
+            <th>Endereço</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="funcionario in funCtrl.funcionarios | filter:pesquisarFuncionario">
+            <td>{{:: funcionario.nomefuncionario }}</td>
+            <td>{{:: funcionario.cpf }}</td>
+            <td>{{:: funcionario.endereco }}</td>
+            <td style="width:100px;">
+                <!-- Botão editar registro, visualiza a aba alterar -->
+                <button class="btn btn-warning" ng-click="funCtrl.showTabUpdate(funcionario)">
+                    <i class="fa fa-pencil"></i>
+                </button>
+                <!-- Botão excluir registro, visualiza a aba excluir -->
+                <button class="btn btn-danger" ng-click="funCtrl.showTabDelete(funcionario)">
+                    <i class="fa fa-trash-o"></i>
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<!-- Paginação -->
+<div class="box-footer clearfix">
+    <paginator url="/#!/funcionarios" pages="{{ funCtrl.pages }}"></paginator>
+</div>
