--- a/app/funcionario/dadosPessoais.html
+++ b/app/funcionario/dadosPessoais.html
@@ -4,7 +4,7 @@
     <div class="box-footer">
 
         <field id="nomefuncionario" label="*Nome" grid="12 6 4" placeholder="Informe o nome completo" model="funCtrl.funcionario.nomefuncionario" readonly="funCtrl.tabDelete"></field>
-        <field id="datanascimento" label="*Data de Nascimento" grid="12 6 4" type="text" model="funCtrl.funcionario.datanascimento" readonly="funCtrl.tabDelete" data-inputmask="'alias': 'mm/dd/yyyy'" data-mask=""></field>
+        <field id="datanascimento" label="*Data de Nascimento" grid="12 6 4"  type="date" model="funCtrl.funcionario.datanascimento" readonly="funCtrl.tabDelete"></field>
         <field id="cpf" label="*Nº CPF" grid="12 6 4" placeholder="Informe o CPF" model="funCtrl.funcionario.cpf" readonly="funCtrl.tabDelete"></field>
 
         <field id="rg" label="*Nº RG" grid="12 6 4" placeholder="Informe o RG" model="funCtrl.funcionario.rg" readonly="funCtrl.tabDelete"></field>
@@ -19,9 +19,9 @@
         <field id="categoriacnh" label="Categoria da CNH" grid="12 6 4" placeholder="Informe o categoria da CNH" model="funCtrl.funcionario.categoriacnh" readonly="funCtrl.tabDelete"></field>
         <field id="vencimentocnh" label="Vencimento da CNH" grid="12 6 4" type="date" model="funCtrl.funcionario.vencimentocnh" readonly="funCtrl.tabDelete"></field>
 
-        <field id="datacontratacao" label="*  Data de contratação" grid="12 6 4" model="funCtrl.funcionario.datacontratacao" readonly="funCtrl.tabDelete"></field>
-        <field id="departamento" label="*Departamento" grid="12 6 4" placeholder="Informe o nome do departamento" model="funCtrl.funcionario.departamento" readonly="funCtrl.tabDelete"></field>
-        <field id="cargo" label="Cargo" grid="12 6 4" placeholder="Informe o nome do cargo" model="funCtrl.funcionario.cago" readonly="funCtrl.tabDelete"></field>
+        <field id="datacontratacao" label="*Data de contratação" grid="12 6 4" model="funCtrl.funcionario.datacontratacao" readonly="funCtrl.tabDelete"></field>
+        <field id="departamento" label="*Departamento" grid="12 6 4" placeholder="Informe o departamento" model="funCtrl.funcionario.departamento" readonly="funCtrl.tabDelete"></field>
+        <field id="cargo" label="Cargo" grid="12 6 4" placeholder="Informe o nome do cargo" model="funCtrl.funcionario.cargo" readonly="funCtrl.tabDelete"></field>
                
     </div>
 
