--- a/app/funcionario/dadosPessoais.html
+++ b/app/funcionario/dadosPessoais.html
@@ -5,25 +5,8 @@
    
     <div class="box-footer">
 
+        <field id="codigofuncionario" label="Matricula" grid="12 6 4" placeholder="Código do funcionário" model="funCtrl.funcionario.codigofuncionario" readonly="funCtrl.tabDelete"></field>
         <field id="nomefuncionario" label="*Nome" grid="12 6 4" placeholder="Informe o nome completo" model="funCtrl.funcionario.nomefuncionario" readonly="funCtrl.tabDelete"></field>
-<<<<<<< HEAD
-        <field id="datanascimento" label="*Data de Nascimento" grid="12 6 4" model="funCtrl.funcionario.datanascimento" readonly="funCtrl.tabDelete"></field>
-=======
-        <field id="datanascimento" label="*Data de Nascimento" grid="12 6 4" type='date' model="funCtrl.funcionario.datanascimento" readonly="funCtrl.tabDelete"></field>
->>>>>>> 62c3cb7be896603b1ce22fcec89ebda9db03dbd3
-        <field id="cpf" label="*Nº CPF" grid="12 6 4" placeholder="Informe o CPF" model="funCtrl.funcionario.cpf" readonly="funCtrl.tabDelete"></field>
-
-        <field id="rg" label="*Nº RG" grid="12 6 4" placeholder="Informe o RG" model="funCtrl.funcionario.rg" readonly="funCtrl.tabDelete"></field>
-        <field id="orgaoemissor" label="Orgão emissor" grid="12 6 4" placeholder="Informe o orgão emissor" model="funCtrl.funcionario.orgaoemissor" readonly="funCtrl.tabDelete"></field>
-        <field id="dataexpedicao" label="Data de expedição" grid="12 6 4" model="funCtrl.funcionario.dataexpedicao" readonly="funCtrl.tabDelete"></field>
-        <field id="naturalidade" label="Naturalidade" grid="12 6 4" placeholder="Informe a naturalidade" model="funCtrl.funcionario.naturalidade" readonly="funCtrl.tabDelete"></field>
-
-        <field id="tituloeleitor" label="Titulo de Eleitor" grid="12 6 4" placeholder="Informe o titulo de Eleitor" type="number" model="funCtrl.funcionario.tituloeleitor" readonly="funCtrl.tabDelete"></field>
-        <field id="pis" label="Nº PIS" grid="12 6 4" placeholder="Informe o PIS" type="number" model="funCtrl.funcionario.pis" readonly="funCtrl.tabDelete"></field>
-
-        <field id="cnh" label="CNH" grid="12 6 4" placeholder="Informe a CNH" model="funCtrl.funcionario.cnh" readonly="funCtrl.tabDelete"></field>
-        <field id="categoriacnh" label="Categoria da CNH" grid="12 6 4" placeholder="Informe o categoria da CNH" model="funCtrl.funcionario.categoriacnh" readonly="funCtrl.tabDelete"></field>
-        <field id="vencimentocnh" label="Vencimento da CNH" grid="12 6 4" model="funCtrl.funcionario.vencimentocnh" readonly="funCtrl.tabDelete"></field>
 
         <field id="datacontratacao" label="*Data de contratação" grid="12 6 4" model="funCtrl.funcionario.datacontratacao" readonly="funCtrl.tabDelete"></field>
         <field id="departamento" label="*Departamento" grid="12 6 4" placeholder="Informe o departamento" model="funCtrl.funcionario.departamento" readonly="funCtrl.tabDelete"></field>
